--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
     <title>My Flask Jinja2 App</title>
 </head>
 <body>
-    <h1>{{ message }}</h1>
+    <h1>{{ data1 }}</h1>
+    <h1>{{ data2 }}</h1>
+    <h1>{{ data3 }}</h1>
 </body>
 </html>
